# aivis_api

./: README.md  pyproject.toml
example/: main.py
src/aivis_api/: __init__.py  aivis_api.py  exception.py
tests/: test_aivis_api.py
